--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,46 +1,28 @@
 
+
+<h1>Brief Introduction</h1>
 <div class="section">
-  <h1>Who am i ..???</h1>
-<img src="../../assets/images/ravi.jpg">
-  <b class="figcaptio">Class of 2019. Gig 'em!</b>
-
-  <em>
-    I am from Hyderabad, India.I am a technology evangelist and I am considered to be an IT aficionado by my colleagues. I am currently pursuing my Masters in Management Information Systems from Mays Business School, Texas A&M University.I am graduating on May, 2019 and actively looking for full time opportunities. I have a work experience of 2 years back in India with Infosys where I worked in the Support and Java Development team for an Australian Telecom giant.I spearheaded various initiatives which led to an increase in efficiency and a reduction in processing time for the firm, that led to him receiving immense recognition.Last summer, I interned with Red Hat as a Business Process Management Intern and was involved in the internal Employee management application. I was specifically involved with the creation of REST APIs' to expose the history data to the application. I always enjoys challenging himself to write flexible and maintainable codes that helps achieve optimum results in the least of time and increase throughput
 
 
-    I have always believed in the importance of positive contribution of giving back to the society.I have worked with various NGOs  in India for the education of underprivileged students.Now coming to my personal hobbies, I love reading books. I have read more than 1000 books in fiction, Sci-fi and Autobiography categories. I also have huge interest in sports and love watching Premier league Soccer matches(I am a Manchester United Fan). I love playing sports like Soccer (naturally..!!!), swimming and badminton
-
-  </em>
-
+    <img src="../../assets/images/ravi.jpg">
+       <em>
+         <p>Hello..!!!I am from Hyderabad, India.I am a technology evangelist and am considered to be an IT aficionado by my colleagues.
+           I am currently pursuing my Masters in<strong> Management Information Systems from Mays Business School, Texas A&M University</strong>.
+           I am graduating on May, 2019 and <strong>actively looking for full time opportunities</strong>.
+         </p>
+         <p>
+           I have a work experience of 2 years back in India with <STRONG> Infosys</STRONG> where I worked in the Support and Java Development team
+           for an Australian Telecom giant.I spearheaded various initiatives which led to an increase in efficiency and a reduction
+           in processing time for the firm, that led immense recognition.Last summer, I interned with <strong>Red Hat,Inc</strong> as a Business Process
+           Management Intern and was involved in the development internal Employee management application. I was specifically
+           involved with the creation of REST APIs' to expose the history data to the application. I always enjoy challenging
+           myself to write flexible and maintainable codes that helps achieve optimum results in the least of time and increase throughput
+         </p>
+         <p>
+         I have always believed in the importance of positive contribution of giving back to the society.I have worked with various
+         NGOs  in India for the education of underprivileged students.Now coming to my personal hobbies, I love reading books. I
+         have read more than 1000 books in fiction, Sci-fi and Autobiography categories. I also have huge interest in sports and
+         love watching Premier league Soccer matches(I am a Manchester United Fan). I love playing sports like Soccer (naturally..!!!), swimming and badminton
+         </p>
+       </em>
 </div>
-
-
-
-<!--  <div class="section">
-			<h1>Our Mission Statement</h1>
-			<div class="goldenbay">
- 				<p>
-
-				<img src="./Cap.png" alt="Graduation">
-   		 	   	<b class="figcaptio">We've made it!</b>
-				</p>
-
-			</div>
-
-			<p>
-			Gradpanda.com is a two-sided peer-to-peer e-commerce website that offers graduation regalia for purchase as well as the option to rent it out. Our products are of the highest quality and at the most competitive rates. You will never have a complaint as we pride ourselves on exemplary customer service. Even if you do, our mascot Midori, will ensure that we make things right again. At GradPanda, we won&#39t ever take your order unless we&#39re certain that we can deliver it to you in the timeframe that you need it in.
-
-      	  		</p>
-
-			<h1>Whoops, we're graduating! Gig 'em!</h1>
-			<div class="smallfont">
-        			<p>Graduations are the happiest of times for students, when they step out to celebrate their achievements and remember an era in their lives. Midori and all of us are committed to outfitting students affordably for such a momentous occasion. Midori would be very unhappy if a student had to pass on such an event because of financial hardship. All of us are here for you.
-	       			</p>
-                    <p>
-                    The business was launched in 2018 at College Station, Texas with a conscious effort to provide students with affordable graduation regalia. We initially served students from Texas A&ampM University and surrounding areas. Based on the overwhelming response, we are gradually expanding to the entire state of Texas. Graduation regalia for all levels of graduation commencements such as undergraduate, graduate school, and doctoral candidates are available to cater to your every need.
-                    </p>
-			</div>
-	    	</div>
-	    	</div
-
--->
