--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -1,27 +1,65 @@
-<div class="card-deck" style="padding-top: 30px">
-  <div class="card">
-    <a class="nav-link" href="" target="_blank">
-      <img class="card-img-top" src="../../assets/images/Porfolio.jpg" alt="Card image cap">
-    </a>
-  </div>
-  <div class="card">
-    <img class="card-img-top" src=".../100px180/" alt="Card image cap">
-    <div class="card-body">
-      <h5 class="card-title">Card title</h5>
-      <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+<div class="container">
+  <div class="card-deck text-center" style="padding-top: 30px">
+
+    <div class="col-sm-6 col-md-4 col-lg-3">
+      <div class="card mb-4">
+        <div class="hovereffect">
+          <img class="img-responsive" src="../../assets/images/project_images/Porfolio.jpg" alt="">
+          <div class="overlay">
+            <h2>Portfolio</h2>
+            <a class="info" href="https://github.com/muppallaraviteja/Portfolio" target="_blank">link here</a>
+          </div>
+        </div>
+      </div>
     </div>
-    <div class="card-footer">
-      <small class="text-muted">Last updated 3 mins ago</small>
+
+    <div class="col-sm-6 col-md-4 col-lg-3">
+      <div class="card mb-4">
+        <div class="hovereffect">
+          <img class="img-responsive" src="../../assets/images/project_images/Cloud_cli.jpg" alt="">
+          <div class="overlay">
+            <h2>Cloud Management</h2>
+            <a class="info" href="https://github.com/muppallaraviteja/Cloud_CLI" target="_blank">link here</a>
+          </div>
+        </div>
+      </div>
     </div>
-  </div>
-  <div class="card">
-    <img class="card-img-top" src=".../100px180/" alt="Card image cap">
-    <div class="card-body">
-      <h5 class="card-title">Card title</h5>
-      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+
+    <div class="col-sm-6 col-md-4 col-lg-3">
+      <div class="card mb-4">
+        <div class="hovereffect">
+          <img class="img-responsive" src="../../assets/images/project_images/Redis.jpg" alt="">
+          <div class="overlay">
+            <h2>Chat Room</h2>
+            <a class="info" href="https://github.com/muppallaraviteja/Chat_Room" target="_blank">link here</a>
+          </div>
+        </div>
+      </div>
     </div>
-    <div class="card-footer">
-      <small class="text-muted">Last updated 3 mins ago</small>
+
+    <div class="col-sm-6 col-md-4 col-lg-3">
+      <div class="card mb-4">
+        <div class="hovereffect">
+          <img class="img-responsive" src="../../assets/images/project_images/Angular.jpg" alt="">
+          <div class="overlay">
+            <h2>Tour Of Heroes</h2>
+            <a class="info" href="https://github.com/muppallaraviteja/AngularExample" target="_blank">link here</a>
+          </div>
+        </div>
+      </div>
     </div>
+
+    <div class="col-sm-6 col-md-4 col-lg-3">
+      <div class="card mb-4">
+        <div class="hovereffect">
+          <img class="img-responsive" src="../../assets/images/project_images/Leetcode.jpg" alt="">
+          <div class="overlay">
+            <h2>Leet Code</h2>
+            <a class="info" href="https://github.com/muppallaraviteja/LeetCode" target="_blank">link here</a>
+          </div>
+        </div>
+      </div>
+    </div>
+
   </div>
 </div>
