--- a/src/app/skills/skills.component.html
+++ b/src/app/skills/skills.component.html
@@ -1,3 +1,81 @@
-<p>
-  skills works!
-</p>
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+
+<div class="row" style="padding-right: 5px; padding-left: 5px">
+  <div class="col-sm-3">
+    <i class="fab fa-java fa-10x"></i>
+    <p>
+      During my 2 years of my work experience I have been involved with Heavy duty Java enterprise application development. Worked on myriad of
+      projects like Dashboard application, MongoDb based Food recommendation application, an e-commerce application  etc. I have
+      experience with frameworks like Hibernate, JDBC, Springboot
+
+    </p>
+  </div>
+  <div class="col-sm-3">
+    <i class="fab fa-angular fa-10x"></i>
+    <p>
+      Angular is only front-end language I have some experience with. I have done projects like my portfolio  which can checked in
+      my github pages.I especially love documentation which I used extensively to build websites </p>
+  </div>
+  <div class="col-sm-3">
+    <i class="fas fa-database fa-10x"></i>
+    <P>I have experience with both SQL and NoSQL databases. Worked with Oracle SQL dev  during my 2-year stint at Infosys, but have been using other database such as MongoDB (I have a training certification) & Redis. I also used my skills gained in data analysis.</P>
+  </div>
+  <div class="col-sm-3">
+    <i class="fab fa-python fa-10x"></i>
+    <P>Among all languages I love python the most for its ease of use and its scripting abilities. Worked on projects like Cloud CLI, Redis Chat Application. I have created many console based applications Flight Search etc.,  I have used  libraries like Panda, Numpy and Scikit trying to understand data analysis.</P>
+  </div>
+</div>
+
+
+
+
+
+
+<!--
+<div class="container">
+  <div class="row" style="padding: 10px">
+
+    <div class="col-sm-3">
+      <div class="card">
+        <img class="card-img-top" src="../../assets/images/skill_images/Java.jpg">
+        <div class="card-block">
+          <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="col-sm-3">
+      <div class="card">
+        <img class="card-img-top" src="../../assets/images/skill_images/Angular.png">
+        <div class="card-block">
+          <p class="card-text">This card has supporting text below as a natural lead-in.
+            Aliquam codeply mauris arcu, tristique a lobortis vitae, condimentum feugiat justo.</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="col-sm-3">
+      <div class="card">
+        <img class="card-img-top " src="../../assets/images/skill_images/HTML.jpg" alt="Card image cap">
+        <div class="card-block">
+          <p class="card-text">This card has even longer content than the first to show that equal height action.</p>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="col-sm-3">
+    <div class="card">
+      <img class="card-img-top" src="../../assets/images/skill_images/pythonlogo.jpg" alt="Card image cap">
+      <div class="card-block">
+        <p class="card-text">This card has even longer content than the first to show that equal height action.</p>
+      </div>
+    </div>
+  </div>
+
+
+</div>
+
+
+
+-->
