--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -3,12 +3,10 @@
   padding: 0;
   color: black;
   text-align: center;
-
-
 }
 
 .navbar{
-  min-height: 60px;
+  min-height: 50px;
 }
 
 .navbar a{
@@ -16,13 +14,7 @@
 }
 
 /*Footer*/
-#lab_social_icon_footer {
-  position:absolute;
-  width: 100%;
-  padding: 10px 0;
-  background-color: #607d8b;
-  bottom:0;
-}
+
 
 #lab_social_icon_footer a {
   color: #333;
@@ -64,27 +56,34 @@
   color: red;
 }
 
-/*
-.quote{
-max-width:390px;
-color: #5c4c40;
-border-left: 3px solid #897860;
-padding: 30px;
-margin:0 auto;
-width:auto;
-display:table;
-font-size: larger;
-}
 
-.all{
-  width: 100%;
-  height: 900px;
-  background-image: url("./../assets/images/Grey.png");
+#page-container {
+  position: relative;
+  min-height: 100vh;
+  background-image: url("../assets/images/grey2.jpg");
+  background-size: cover;
   background-repeat: no-repeat;
-  background-attachment: fixed;
-  background-position: center;
-  opacity: 0.5;
-
 
 }
-*/
+#content-wrap {
+  padding-bottom: 2.5rem;    /* Footer height */
+}
+#footer {
+  position: relative;
+  bottom: 0;
+  width: 100%;
+  height: .5rem;            /* Footer height */
+}
+
+#lab_social_icon_footer {
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  /*padding: 10px 0;*/
+  background-color: #607d8b;
+
+}
+
+
