--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,123 +1,53 @@
-<nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-dark">
+<div id="page-container">
+  <div id="content-wrap">
+      <nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-dark">
 
-  <a class="navbar-brand" href="https://www.linkedin.com/in/ravi-teja-muppalla-49734991" target="_blank" >
-    <img src="../assets/images/ravi.jpg" width="50" height="60" alt="Profile" style="t" >
-  </a>
+        <a class="navbar-brand" href="https://www.linkedin.com/in/ravi-teja-muppalla-49734991" target="_blank" >
+          <img src="../assets/images/ravi.jpg" width="50" height="60" alt="Profile">
+        </a>
 
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
 
+          <ul class="navbar-nav mr-5">
 
-    <ul class="navbar-nav mr-5">
+            <li class="nav-item " >
+              <a class="nav-link" routerLink="/home">About Me</a>
+            </li>
 
-      <li class="nav-item " >
-        <a class="nav-link" routerLink="/home">About Me</a>
-      </li>
+            <li class="nav-item">
+              <a class="nav-link" routerLink="/skills">Skills</a>
+            </li>
 
-      <li class="nav-item">
-        <a class="nav-link" routerLink="/skills">Skills</a>
-      </li>
+            <li class="nav-item">
+              <a class="nav-link" routerLink="/projects">My Projects</a>
+            </li>
 
-      <li class="nav-item">
-        <a class="nav-link" routerLink="/projects">My Projects</a>
-      </li>
+            <li class="nav-item">
+              <a class="nav-link" href="../assets/Resume/Resume.pdf" target="_blank">Resume</a>
+            </li>
 
-      <li class="nav-item">
-        <a class="nav-link" href="../assets/Resume/Resume.pdf" target="_blank">Resume</a>
-      </li>
-
-      <li class="nav-item">
-        <a class="nav-link" routerLink="/contact">Contact Info</a>
-      </li>
-    </ul>
-
-  </div>
-
-</nav>
-<!--<div class = "all">-->
-<!--</div>-->
-<!--<div class = "all">-->
-<!--<div class="qoute">-->
-<!--<q>An Investment in Knowledge pays the best interest </q><br>-->
-<!--<cite>Benjamin Franklin</cite>-->
-<!--</div>-->
-<!--<div style="text-align:center;padding: 80px; font-style: italic">-->
-  <!--<h5 style="font-size: 40px">-->
-    <!--Howdy …!!! My name is Ravi Teja!!!-->
-  <!--</h5>-->
-
-  <!--</div>-->
-<!--</div>-->
-
-<router-outlet></router-outlet>
-
-<section id="lab_social_icon_footer" >
-  <!-- Include Font Awesome Stylesheet in Header -->
-  <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
-  <div class="container">
-    <div class="text-center center-block">
-      <a href="https://github.com/muppallaraviteja" target="_blank"><i id="social-gt" class="fa fa-github-square fa-3x social"></i></a>
-      <a href="https://www.linkedin.com/in/ravi-teja-muppalla-49734991" target="_blank"><i id="social-ln" class="fa fa-linkedin-square fa-3x social"></i></a>
-      <a href="https://www.facebook.com/profile.php?id=100002409441787" TARGET="_blank"><i id="social-fb" class="fa fa-facebook-square fa-3x social"></i></a>
-      <a href="mailto:ravshanth_2003@tamu.edu"><i id="social-em" class="fa fa-envelope-square fa-3x social"></i></a>
-    </div>
-  </div>
-</section>
-<!--
-
-&lt;!&ndash; Footer &ndash;&gt;
-<footer class="page-footer font-small cyan darken-3 navbar-fixed-bottom">
-
-  &lt;!&ndash; Footer Elements &ndash;&gt;
-  <div class="container">
-
-    &lt;!&ndash; Grid row&ndash;&gt;
-    <div class="row">
-
-      &lt;!&ndash; Grid column &ndash;&gt;
-      <div class="col-md-12 py-5">
-        <div class="mb-5 flex-center">
-
-          &lt;!&ndash; Facebook &ndash;&gt;
-          <a class="fb-ic">
-            <i class="fab fa-facebook-f fa-lg white-text mr-md-5 mr-3 fa-2x"> </i>
-          </a>
-          &lt;!&ndash; Twitter &ndash;&gt;
-          <a class="tw-ic">
-            <i class="fab fa-twitter fa-lg white-text mr-md-5 mr-3 fa-2x"> </i>
-          </a>
-          &lt;!&ndash; Google +&ndash;&gt;
-          <a class="gplus-ic">
-            <i class="fab fa-google-plus-g fa-lg white-text mr-md-5 mr-3 fa-2x"> </i>
-          </a>
-          &lt;!&ndash;Linkedin &ndash;&gt;
-          <a class="li-ic">
-            <i class="fab fa-linkedin-in fa-lg white-text mr-md-5 mr-3 fa-2x"> </i>
-          </a>
-          &lt;!&ndash;Instagram&ndash;&gt;
-          <a class="ins-ic">
-            <i class="fab fa-instagram fa-lg white-text mr-md-5 mr-3 fa-2x"> </i>
-          </a>
-          &lt;!&ndash;Pinterest&ndash;&gt;
-          <a class="pin-ic">
-            <i class="fab fa-pinterest fa-lg white-text fa-2x"> </i>
-          </a>
+         <!--   <li class="nav-item">
+              <a class="nav-link" routerLink="/contact" >Contact Info</a>
+            </li>-->
+          </ul>
         </div>
+      </nav>
+  </div>
+
+  <router-outlet></router-outlet>
+
+  <footer id="lab_social_icon_footer" >
+    <!-- Include Font Awesome Stylesheet in Header -->
+    <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
+    <div class="container">
+      <div class="text-center center-block">
+        <a href="https://github.com/muppallaraviteja" target="_blank"><i id="social-gt" class="fa fa-github-square fa-3x social"></i></a>
+        <a href="https://www.linkedin.com/in/ravi-teja-muppalla-49734991" target="_blank"><i id="social-ln" class="fa fa-linkedin-square fa-3x social"></i></a>
+        <a href="https://www.facebook.com/profile.php?id=100002409441787" TARGET="_blank"><i id="social-fb" class="fa fa-facebook-square fa-3x social"></i></a>
+        <a href="mailto:ravshanth_2003@tamu.edu"><i id="social-em" class="fa fa-envelope-square fa-3x social"></i></a>
       </div>
-      &lt;!&ndash; Grid column &ndash;&gt;
-
     </div>
-    &lt;!&ndash; Grid row&ndash;&gt;
+    <a>&#169;Developed by Ravi Teja Muppalla</a>
+  </footer>
+</div>
 
-  </div>
-  &lt;!&ndash; Footer Elements &ndash;&gt;
-
-  &lt;!&ndash; Copyright &ndash;&gt;
-  <div class="footer-copyright text-center py-3">© 2018 Copyright:
-    <a href="https://mdbootstrap.com/education/bootstrap/"> MDBootstrap.com</a>
-  </div>
-  &lt;!&ndash; Copyright &ndash;&gt;
-
-</footer>
-&lt;!&ndash; Footer &ndash;&gt;
-
--->
