--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,23 +1,25 @@
-<div class="row">
-
-  <div class="col-sm-6">
-    <div class="card">
-      <div class="card-body">
-        <h5 class="card-title">Special title treatment</h5>
-        <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-        <a href="#" class="btn btn-primary">Go somewhere</a>
+<div style="text-align:center">
+  <div class="container">
+    <div class="col-md-5">
+      <div class="form-area">
+        <form role="form">
+          <br style="clear:both">
+          <h3 style="margin-bottom: 25px; text-align: center;">Contact Form</h3>
+          <div class="form-group">
+            <input type="text" class="form-control" id="name" name="name" placeholder="Name" [(ngModel)]="name" required>
+          </div>
+          <div class="form-group">
+            <input type="email" class="form-control" id="email" name="email" placeholder="Email" [(ngModel)]="email" required>
+          </div>
+           <div class="form-group">
+            <input type="text" class="form-control" id="subject" name="subject" placeholder="Subject" [(ngModel)]="subject" required>
+          </div>
+          <div class="form-group">
+            <textarea class="form-control" type="textarea" id="message" name="message" placeholder="Message" [(ngModel)]="message" maxlength="140" rows="5" required></textarea>
+          </div>
+          <button type="button" id="submit" name="submit" class="btn btn-primary pull-right" (click)="save(name, email, subject, message)">Submit Form</button>
+        </form>
       </div>
     </div>
   </div>
-
-  <div class="col-sm-6">
-    <div class="card">
-      <div class="card-body">
-        <h5 class="card-title">Special title treatment</h5>
-        <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-        <a href="#" class="btn btn-primary">Go somewhere</a>
-      </div>
-    </div>
-  </div>
-
 </div>
