--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -1,8 +1,8 @@
 <div class="container">
   <div class="card-deck text-center" style="padding-top: 30px">
 
-    <div class="col-sm-6 col-md-4 col-lg-3">
-      <div class="card mb-4">
+    <div class="col-sm-6 col-md-4 col-lg-4">
+      <div class="card mb-4 project">
         <div class="hovereffect">
           <img class="img-responsive" src="../../assets/images/project_images/Porfolio.jpg" alt="">
           <div class="overlay">
@@ -13,8 +13,8 @@
       </div>
     </div>
 
-    <div class="col-sm-6 col-md-4 col-lg-3">
-      <div class="card mb-4">
+    <div class="col-sm-6 col-md-4 col-lg-4">
+      <div class="card mb-4 project">
         <div class="hovereffect">
           <img class="img-responsive" src="../../assets/images/project_images/Cloud_cli.jpg" alt="">
           <div class="overlay">
@@ -25,8 +25,8 @@
       </div>
     </div>
 
-    <div class="col-sm-6 col-md-4 col-lg-3">
-      <div class="card mb-4">
+    <div class="col-sm-6 col-md-4 col-lg-4">
+      <div class="card mb-4 project">
         <div class="hovereffect">
           <img class="img-responsive" src="../../assets/images/project_images/Redis.jpg" alt="">
           <div class="overlay">
@@ -37,8 +37,8 @@
       </div>
     </div>
 
-    <div class="col-sm-6 col-md-4 col-lg-3">
-      <div class="card mb-4">
+    <div class="col-sm-6 col-md-4 col-lg-4">
+      <div class="card mb-4 project">
         <div class="hovereffect">
           <img class="img-responsive" src="../../assets/images/project_images/Angular.jpg" alt="">
           <div class="overlay">
@@ -49,8 +49,8 @@
       </div>
     </div>
 
-    <div class="col-sm-6 col-md-4 col-lg-3">
-      <div class="card mb-4">
+    <div class="col-sm-6 col-md-4 col-lg-4">
+      <div class="card mb-4 project">
         <div class="hovereffect">
           <img class="img-responsive" src="../../assets/images/project_images/Leetcode.jpg" alt="">
           <div class="overlay">
